Make azure 3.12 and java 8 compatible Add stax2-api dependency